add .travis.yml for 2.3.x branch too